--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@sanity/client": "^1.149.16",
     "compression": "^1.7.1",
     "groq": "^1.149.16",
+    "groq-js": "^0.1.5",
     "polka": "next",
     "prettier": "^2.0.5",
     "prettier-plugin-svelte": "^1.1.0",
